Entrega_adrian_sanchez_albanell_belen_san_martin_diez/Vlcl/src/parser/VlclParser.java
// $ANTLR 3.4 /home/brutus729/Documents/FIB/PRACTICA_CL/Entrega_adrian_sanchez_albanell_belen_san_martin_diez/Vlcl/src/parser/Vlcl.g 2017-04-07 20:28:14

    package parser;
    import interp.VlclTree;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


/**
 * Copyright (c) 2011, Jordi Cortadella
 * All rights reserved.
 *
 * Redistribution and use in source and binary forms, with or without
 * modification, are permitted provided that the following conditions are met:
 *    * Redistributions of source code must retain the above copyright
 *      notice, this list of conditions and the following disclaimer.
 *    * Redistributions in binary form must reproduce the above copyright
 *      notice, this list of conditions and the following disclaimer in the
 *      documentation and/or other materials provided with the distribution.
 *    * Neither the name of the <organization> nor the
 *      names of its contributors may be used to endorse or promote products
 *      derived from this software without specific prior written permission.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
 * ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
 * WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
 * DISCLAIMED. IN NO EVENT SHALL <COPYRIGHT HOLDER> BE LIABLE FOR ANY
 * DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
 * (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
 * LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
 * ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
 * SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
*/
@SuppressWarnings({"all", "warnings", "unchecked"})
public class VlclParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "ANDBW", "ARG_LIST", "ARRAY_ACCESS", "ARRAY_RANGE", "ASSIGN", "ASSIGNATION", "ASSIGNSIMBOL", "BEGIN", "BIN", "CASE", "CASE_ITEM", "COMMENT", "COMP", "CONCAT", "CONCAT_MULT", "COND", "DEC", "DEFAULT", "ELSE", "END", "ENDCASE", "ENDFUNCTION", "ENDMODULE", "EQ", "ESC_SEQ", "FOR", "FUNCALL", "FUNCTION", "HEX", "ID", "IF", "INOUT", "INPUT", "LIST_INSTR", "LIST_MODULES", "LIST_STMTS", "MODULE", "NAND", "NOR", "NOT", "NOTBW", "NUM", "NUM_CONST", "OCT", "OR", "ORBW", "OUTPUT", "PARAMETER", "PARAMS", "PART_ARRAY_ACCESS", "PLUS", "REG", "SHIFT", "TERM", "WIRE", "WS", "XORS", "'('", "')'", "','", "':'", "';'", "'['", "']'", "'{'", "'}'"
    };

    public static final int EOF=-1;
    public static final int T__62=62;
    public static final int T__63=63;
    public static final int T__64=64;
    public static final int T__65=65;
    public static final int T__66=66;
    public static final int T__67=67;
    public static final int T__68=68;
    public static final int T__69=69;
    public static final int T__70=70;
    public static final int AND=4;
    public static final int ANDBW=5;
    public static final int ARG_LIST=6;
    public static final int ARRAY_ACCESS=7;
    public static final int ARRAY_RANGE=8;
    public static final int ASSIGN=9;
    public static final int ASSIGNATION=10;
    public static final int ASSIGNSIMBOL=11;
    public static final int BEGIN=12;
    public static final int BIN=13;
    public static final int CASE=14;
    public static final int CASE_ITEM=15;
    public static final int COMMENT=16;
    public static final int COMP=17;
    public static final int CONCAT=18;
    public static final int CONCAT_MULT=19;
    public static final int COND=20;
    public static final int DEC=21;
    public static final int DEFAULT=22;
    public static final int ELSE=23;
    public static final int END=24;
    public static final int ENDCASE=25;
    public static final int ENDFUNCTION=26;
    public static final int ENDMODULE=27;
    public static final int EQ=28;
    public static final int ESC_SEQ=29;
    public static final int FOR=30;
    public static final int FUNCALL=31;
    public static final int FUNCTION=32;
    public static final int HEX=33;
    public static final int ID=34;
    public static final int IF=35;
    public static final int INOUT=36;
    public static final int INPUT=37;
    public static final int LIST_INSTR=38;
    public static final int LIST_MODULES=39;
    public static final int LIST_STMTS=40;
    public static final int MODULE=41;
    public static final int NAND=42;
    public static final int NOR=43;
    public static final int NOT=44;
    public static final int NOTBW=45;
    public static final int NUM=46;
    public static final int NUM_CONST=47;
    public static final int OCT=48;
    public static final int OR=49;
    public static final int ORBW=50;
    public static final int OUTPUT=51;
    public static final int PARAMETER=52;
    public static final int PARAMS=53;
    public static final int PART_ARRAY_ACCESS=54;
    public static final int PLUS=55;
    public static final int REG=56;
    public static final int SHIFT=57;
    public static final int TERM=58;
    public static final int WIRE=59;
    public static final int WS=60;
    public static final int XORS=61;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public VlclParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public VlclParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return VlclParser.tokenNames; }
    public String getGrammarFileName() { return "/home/brutus729/Documents/FIB/PRACTICA_CL/Entrega_adrian_sanchez_albanell_belen_san_martin_diez/Vlcl/src/parser/Vlcl.g"; }


    public static class prog_return extends ParserRuleReturnScope {
        VlclTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "prog"
    // /home/brutus729/Documents/FIB/PRACTICA_CL/Entrega_adrian_sanchez_albanell_belen_san_martin_diez/Vlcl/src/parser/Vlcl.g:74:1: prog : ( mod )+ EOF -> ^( LIST_MODULES ( mod )+ ) ;
    public final VlclParser.prog_return prog() throws RecognitionException {
        VlclParser.prog_return retval = new VlclParser.prog_return();
        retval.start = input.LT(1);


        VlclTree root_0 = null;

        Token EOF2=null;
        VlclParser.mod_return mod1 =null;


        VlclTree EOF2_tree=null;
        RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
        RewriteRuleSubtreeStream stream_mod=new RewriteRuleSubtreeStream(adaptor,"rule mod");
        try {
            // /home/brutus729/Documents/FIB/PRACTICA_CL/Entrega_adrian_sanchez_albanell_belen_san_martin_diez/Vlcl/src/parser/Vlcl.g:74:9: ( ( mod )+ EOF -> ^( LIST_MODULES ( mod )+ ) )
            // /home/brutus729/Documents/FIB/PRACTICA_CL/Entrega_adrian_sanchez_albanell_belen_san_martin_diez/Vlcl/src/parser/Vlcl.g:74:11: ( mod )+ EOF
            {
            // /home/brutus729/Documents/FIB/PRACTICA_CL/Entrega_adrian_sanchez_albanell_belen_san_martin_diez/Vlcl/src/parser/Vlcl.g:74:11: ( mod )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==MODULE) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /home/brutus729/Documents/FIB/PRACTICA_CL/Entrega_adrian_sanchez_albanell_belen_san_martin_diez/Vlcl/src/parser/Vlcl.g:74:11: mod
            	    {
            	    pushFollow(FOLLOW_mod_in_prog323);
            	    mod1=mod();

            	    state._fsp--;

            	    stream_mod.add(mod1.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_prog326);  
            stream_EOF.add(EOF2);


            // AST REWRITE
            // elements: mod
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (VlclTree)adaptor.nil();
            // 74:20: -> ^( LIST_MODULES ( mod )+ )
            {
                // /home/brutus729/Documents/FIB/PRACTICA_CL/Entrega_adrian_sanchez_albanell_belen_san_martin_diez/Vlcl/src/parser/Vlcl.g:74:23: ^( LIST_MODULES ( mod )+ )
                {
                VlclTree root_1 = (VlclTree)adaptor.nil();
                root_1 = (VlclTree)adaptor.becomeRoot(
                (VlclTree)adaptor.create(LIST_MODULES, "LIST_MODULES")
                , root_1);

                if ( !(stream_mod.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_mod.hasNext() ) {
                    adaptor.addChild(root_1, stream_mod.nextTree());

                }
                stream_mod.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (VlclTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (VlclTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "prog"


    public static class mod_return extends ParserRuleReturnScope {
        VlclTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "mod"
    // /home/brutus729/Documents/FIB/PRACTICA_CL/Entrega_adrian_sanchez_albanell_belen_san_martin_diez/Vlcl/src/parser/Vlcl.g:79:1: mod : MODULE ! ID ^ params ';' ! block_instructions ENDMODULE !;
    public final VlclParser.mod_return mod() throws RecognitionException {
        VlclParser.mod_return retval = new VlclParser.mod_return();
        retval.start = input.LT(1);


        VlclTree root_0 = null;

        Token MODULE3=null;
        Token ID4=null;
        Token char_literal6=null;
        Token ENDMODULE8=null;
        VlclParser.params_return params5 =null;

        VlclParser.block_instructions_return block_instructions7 =null;


        VlclTree MODULE3_tree=null;
        VlclTree ID4_tree=null;
        VlclTree char_literal6_tree=null;
        VlclTree ENDMODULE8_tree=null;

        try {
            // /home/brutus729/Documents/FIB/PRACTICA_CL/Entrega_adrian_sanchez_albanell_belen_san_martin_diez/Vlcl/src/parser/Vlcl.g:79:9: ( MODULE ! ID ^ params ';' ! block_instructions ENDMODULE !)
            // /home/brutus729/Documents/FIB/PRACTICA_CL/Entrega_adrian_sanchez_albanell_belen_san_martin_diez/Vlcl/src/parser/Vlcl.g:79:11: MODULE ! ID ^ params ';' ! block_instructions ENDMODULE !
            {
            root_0 = (VlclTree)adaptor.nil();


            MODULE3=(Token)match(input,MODULE,FOLLOW_MODULE_in_mod358); 

            ID4=(Token)match(input,ID,FOLLOW_ID_in_mod361); 
            ID4_tree = 
            (VlclTree)adaptor.create(ID4)
            ;
            root_0 = (VlclTree)adaptor.becomeRoot(ID4_tree, root_0);


            pushFollow(FOLLOW_params_in_mod364);
            params5=params();

            state._fsp--;

            adaptor.addChild(root_0, params5.getTree());

            char_literal6=(Token)match(input,66,FOLLOW_66_in_mod366); 

            pushFollow(FOLLOW_block_instructions_in_mod369);
            block_instructions7=block_instructions();

            state._fsp--;

            adaptor.addChild(root_0, block_instructions7.getTree());

            ENDMODULE8=(Token)match(input,ENDMODULE,FOLLOW_ENDMODULE_in_mod371); 

            }

            retval.stop = input.LT(-1);


            retval.tree = (VlclTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (VlclTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "mod"


    public static class block_instructions_return extends ParserRuleReturnScope {
        VlclTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "block_instructions"
    // /home/brutus729/Documents/FIB/PRACTICA_CL/Entrega_adrian_sanchez_albanell_belen_san_martin_diez/Vlcl/src/parser/Vlcl.g:84:1: block_instructions : ( instruction )* -> ^( LIST_INSTR ( instruction )* ) ;
    public final VlclParser.block_instructions_return block_instructions() throws RecognitionException {
        VlclParser.block_instructions_return retval = new VlclParser.block_instructions_return();
        retval.start = input.LT(1);


        VlclTree root_0 = null;

        VlclParser.instruction_return instruction9 =null;


        RewriteRuleSubtreeStream stream_instruction=new RewriteRuleSubtreeStream(adaptor,"rule instruction");
        try {
            // /home/brutus729/Documents/FIB/PRACTICA_CL/Entrega_adrian_sanchez_albanell_belen_san_martin_diez/Vlcl/src/parser/Vlcl.g:85:9: ( ( instruction )* -> ^( LIST_INSTR ( instruction )* ) )
            // /home/brutus729/Documents/FIB/PRACTICA_CL/Entrega_adrian_sanchez_albanell_belen_san_martin_diez/Vlcl/src/parser/Vlcl.g:85:11: ( instruction )*
            {
            // /home/brutus729/Documents/FIB/PRACTICA_CL/Entrega_adrian_sanchez_albanell_belen_san_martin_diez/Vlcl/src/parser/Vlcl.g:85:11: ( instruction )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==ASSIGN||LA2_0==CASE||LA2_0==FOR||LA2_0==FUNCTION||(LA2_0 >= ID && LA2_0 <= INPUT)||(LA2_0 >= OUTPUT && LA2_0 <= PARAMETER)||LA2_0==REG||LA2_0==WIRE) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // /home/brutus729/Documents/FIB/PRACTICA_CL/Entrega_adrian_sanchez_albanell_belen_san_martin_diez/Vlcl/src/parser/Vlcl.g:85:12: instruction
            	    {
            	    pushFollow(FOLLOW_instruction_in_block_instructions401);
            	    instruction9=instruction();

            	    state._fsp--;

            	    stream_instruction.add(instruction9.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            // AST REWRITE
            // elements: instruction
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (VlclTree)adaptor.nil();
            // 85:26: -> ^( LIST_INSTR ( instruction )* )
            {
                // /home/brutus729/Documents/FIB/PRACTICA_CL/Entrega_adrian_sanchez_albanell_belen_san_martin_diez/Vlcl/src/parser/Vlcl.g:85:29: ^( LIST_INSTR ( instruction )* )
                {
                VlclTree root_1 = (VlclTree)adaptor.nil();
                root_1 = (VlclTree)adaptor.becomeRoot(
                (VlclTree)adaptor.create(LIST_INSTR, "LIST_INSTR")
                , root_1);

                // /home/brutus729/Documents/FIB/PRACTICA_CL/Entrega_adrian_sanchez_albanell_belen_san_martin_diez/Vlcl/src/parser/Vlcl.g:85:42: ( instruction )*
                while ( stream_instruction.hasNext() ) {
                    adaptor.addChild(root_1, stream_instruction.nextTree());

                }
                stream_instruction.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (VlclTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (VlclTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "block_instructions"


    public static class block_stmts_return extends ParserRuleReturnScope {
        VlclTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "block_stmts"
    // /home/brutus729/Documents/FIB/PRACTICA_CL/Entrega_adrian_sanchez_albanell_belen_san_martin_diez/Vlcl/src/parser/Vlcl.g:88:1: block_stmts : ( statement )* -> ^( LIST_STMTS ( statement )* ) ;
    public final VlclParser.block_stmts_return block_stmts() throws RecognitionException {
        VlclParser.block_stmts_return retval = new VlclParser.block_stmts_return();
        retval.start = input.LT(1);


        VlclTree root_0 = null;

        VlclParser.statement_return statement10 =null;


        RewriteRuleSubtreeStream stream_statement=new RewriteRuleSubtreeStream(adaptor,"rule statement");
        try {
            // /home/brutus729/Documents/FIB/PRACTICA_CL/Entrega_adrian_sanchez_albanell_belen_san_martin_diez/Vlcl/src/parser/Vlcl.g:89:9: ( ( statement )* -> ^( LIST_STMTS ( statement )* ) )
            // /home/brutus729/Documents/FIB/PRACTICA_CL/Entrega_adrian_sanchez_albanell_belen_san_martin_diez/Vlcl/src/parser/Vlcl.g:89:11: ( statement )*
            {
            // /home/brutus729/Documents/FIB/PRACTICA_CL/Entrega_adrian_sanchez_albanell_belen_san_martin_diez/Vlcl/src/parser/Vlcl.g:89:11: ( statement )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==ASSIGN||LA3_0==CASE||LA3_0==FOR||(LA3_0 >= ID && LA3_0 <= IF)) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // /home/brutus729/Documents/FIB/PRACTICA_CL/Entrega_adrian_sanchez_albanell_belen_san_martin_diez/Vlcl/src/parser/Vlcl.g:89:12: statement
            	    {
            	    pushFollow(FOLLOW_statement_in_block_stmts438);
            	    statement10=statement();

            	    state._fsp--;

            	    stream_statement.add(statement10.getTree());

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            // AST REWRITE
            // elements: statement
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (VlclTree)adaptor.nil();
            // 89:24: -> ^( LIST_STMTS ( statement )* )
            {
                // /home/brutus729/Documents/FIB/PRACTICA_CL/Entrega_adrian_sanchez_albanell_belen_san_martin_diez/Vlcl/src/parser/Vlcl.g:89:27: ^( LIST_STMTS ( statement )* )
                {
                VlclTree root_1 = (VlclTree)adaptor.nil();
                root_1 = (VlclTree)adaptor.becomeRoot(
                (VlclTree)adaptor.create(LIST_STMTS, "LIST_STMTS")
                , root_1);

                // /home/brutus729/Documents/FIB/PRACTICA_CL/Entrega_adrian_sanchez_albanell_belen_san_martin_diez/Vlcl/src/parser/Vlcl.g:89:40: ( statement )*
                while ( stream_statement.hasNext() ) {
                    adaptor.addChild(root_1, stream_statement.nextTree());

                }
                stream_statement.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (VlclTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (VlclTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "block_stmts"


    public static class instruction_return extends ParserRuleReturnScope {
        VlclTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "instruction"
    // /home/brutus729/Documents/FIB/PRACTICA_CL/Entrega_adrian_sanchez_albanell_belen_san_martin_diez/Vlcl/src/parser/Vlcl.g:92:1: instruction : ( signal_dec | var_dec | param_dec | mod_dec | func_dec | statement );
    public final VlclParser.instruction_return instruction() throws RecognitionException {
        VlclParser.instruction_return retval = new VlclParser.instruction_return();
        retval.start = input.LT(1);


        VlclTree root_0 = null;

        VlclParser.signal_dec_return signal_dec11 =null;

        VlclParser.var_dec_return var_dec12 =null;

        VlclParser.param_dec_return param_dec13 =null;

        VlclParser.mod_dec_return mod_dec14 =null;

        VlclParser.func_dec_return func_dec15 =null;

        VlclParser.statement_return statement16 =null;


